第一版提交

--- a/src/style/overwirte.less
+++ b/src/style/overwirte.less
@@ -1,6 +1,6 @@
 // 设置首页背景图
 .theme--light.v-application {
-  background-image: url(~assets/timg.jpg) !important;
-  background-repeat: no-repeat !important;
-  background-size: cover;
+  // background-image: url(~assets/timg.jpg) !important;
+  // background-repeat: no-repeat !important;
+  // background-size: cover;
 }
