--- a/src/style/app.less
+++ b/src/style/app.less
@@ -1,3 +1,44 @@
 html {
   overflow-y: auto;
 }
+.color-white {
+  color: #fff !important;
+}
+.pt-0 {
+  padding-top: 0;
+}
+.wrapper {
+  display: block;
+  position: relative;
+  max-width: 1180px;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.home {
+  &-bg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url(~assets/wenli.jpg);
+    background-repeat: repeat;
+    // background-size: cover;
+    // opacity: 0.8;
+  }
+  .search-bar {
+    background: #fff;
+    padding-top: 20px;
+    color: #fff;
+    /* background: #fff; */
+    /* color: #333; */
+    border-bottom: 1px solid rgba(0, 0, 0, 0.49);
+  }
+  .movie-content {
+    iframe {
+      width: 100%;
+      height: 600px;
+    }
+  }
+}
