--- a/src/style/overwirte.less
+++ b/src/style/overwirte.less
@@ -1,6 +1,10 @@
 // 设置首页背景图
 .theme--light.v-application {
-  // background-image: url(~assets/timg.jpg) !important;
+  // background-image: url(~assets/timg.jpg)
   // background-repeat: no-repeat !important;
   // background-size: cover;
+}
+.v-input--selection-controls {
+  padding-top: 0;
+  margin-top: 0;
 }
